--- a/frontend/public/views/profile.html
+++ b/frontend/public/views/profile.html
@@ -59,19 +59,11 @@
 			</div>
 			<div class="flex flex-col items-center border-8 animate-rainbow p-6 h-32 w-full">
 				<h1 class="text-base sm:text-lg font-bold">Wins / losses</h1>
-				<div id="winsAndLosses" class="w-full overflow-y-auto max-h-48 mt-2">
-					<!-- Example: -->
-					<ul>
-						<li>1 - 15</li>
-						<!-- etc. -->
-					</ul>
-				</div>
+				<div id="winsAndLosses" class="w-full overflow-y-auto max-h-48 mt-2"></div>
 			</div>
 			<div class="flex flex-col items-center border-8 animate-rainbow p-6 h-64 sm:h-72 w-full overflow-y-auto">
 				<h1 class="text-base sm:text-lg font-bold">Match history</h1>
-				<div id="matchHistory" class="w-full overflow-y-auto max-h-48 mt-2">
-					<!-- Populate with match entries -->
-				</div>
+				<div id="matchHistory" class="w-full overflow-y-auto max-h-48 mt-2"></div>
 			</div>
 			<div class="flex flex-col items-center border-8 animate-rainbow p-6 h-64 sm:h-72 w-full overflow-y-auto">
 				<h1 class="text-base sm:text-lg font-bold">Friends</h1>
