--- a/frontend/public/views/matchmaking.html
+++ b/frontend/public/views/matchmaking.html
@@ -18,9 +18,16 @@
                 <button class="flex-1 px-6 py-3 bg-blue-900 hover:bg-blue-950 rounded-md text-lg" id="createRoom">
                     Create Match
                 </button>
-                <button class="flex-1 px-6 py-3 bg-blue-900 hover:bg-blue-950 rounded-md text-lg">
+                <button class="flex-1 px-6 py-3 bg-blue-900 hover:bg-blue-950 rounded-md text-lg" id="createTournament">
                     Create Tournament
                 </button>
+				<dialog class="modal m-2" id="players-modal">
+					<h2>Choose the amount of players</h2>
+					<button class="flex-1 px-6 py-3 bg-blue-900 hover:bg-blue-950 rounded-md text-lg text-white" id="4players">4</button>
+					<button class="flex-1 px-6 py-3 bg-blue-900 hover:bg-blue-950 rounded-md text-lg text-white" id="8players">8</button>
+					<button class="flex-1 px-6 py-3 bg-blue-900 hover:bg-blue-950 rounded-md text-lg text-white" id="16players">16</button>
+					<button class="sm:text-base rounded-md border-2 border-purple-500 bg-purple-700 hover:bg-purple-950 text-white mb-2 mt-6 mx-auto" id="close-total-players-modal">Cancel</button>
+				</dialog>
             </div>
             <div class="flex flex-col gap-4 w-full max-w-2xl" id="availableRooms">
                 <div class="flex flex-col sm:flex-row justify-between items-center bg-purple-900/80 border border-purple-600 rounded-lg p-4 gap-4">
@@ -30,7 +37,7 @@
                     </div>
                     <button class="px-4 py-2 bg-blue-900 hover:bg-blue-950 rounded-md w-full sm:w-auto">Join</button>
                 </div>
-                <!-- Add more matches/tournaments depending on if any available -->
+                <!-- Add more matches/tournaments depending on if any available use ul-->
             </div>
 
         </div>
