--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -89,3 +89,13 @@
   font-style: normal;
   font-display: swap;
 }
+
+dialog[open] {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 0;
+  padding: 2rem;
+  z-index: 1000;
+}
