--- a/frontend/public/views/profile.html
+++ b/frontend/public/views/profile.html
@@ -65,15 +65,15 @@
 				<h1 class="text-base sm:text-lg font-bold">Match history</h1>
 				<div id="matchHistory" class="w-full overflow-y-auto custom-scrollbar max-h-48 mt-2"></div>
 			</div>
-			<div class="flex flex-col items-center border-8 animate-rainbow p-6 h-64 sm:h-72 w-full overflow-y-auto custom-scrollbar">
+			<div class="flex flex-col items-center border-8 animate-rainbow p-6 h-64 sm:h-72 w-full">
 				<h1 class="text-base sm:text-lg font-bold">Friends</h1>
 				<ul id="friendsList"></ul>
 			</div>
-			<div class="flex flex-col items-center border-8 animate-rainbow p-4 w-full overflow-y-auto custom-scrollbar">
+			<div class="flex flex-col items-center border-8 animate-rainbow p-6 h-48 w-full">
 				<h1 class="text-base sm:text-lg font-bold">Friend Requests</h1>
 				<ul id="requests"></ul>
 			</div>
-			<div class="flex flex-col items-center border-8 animate-rainbow p-4" >
+			<div class="flex flex-col items-center border-8 animate-rainbow p-6 h-48 w-full" >
 				<h1 class="text-base sm:text-lg font-bold">Friend Search</h1>
 				<div>
 					<input type="text" id="search-input" placeholder="Search for username...">
