--- a/frontend/public/views/matchmaking.html
+++ b/frontend/public/views/matchmaking.html
@@ -21,6 +21,16 @@
                 <button class="flex-1 px-6 py-3 bg-blue-900 hover:bg-blue-950 rounded-md text-lg">
                     Create Tournament
                 </button>
+                <dialog class="modal m-2" id="roomSettingsModal">
+                    <h2>Customize the room</h2>
+                    <form onsubmit="" id="gameSettingsForm">
+                        <label>Game Size
+                            <input type="number" name="gameSize" value="2" min="2" max="8" required
+                                   class="sm:text-base rounded-md border-2 border-gray-300 focus:outline-none focus:ring-2 focus:ring-purple-500">
+                        </label>
+                        <button type="submit" class="sm:text-base rounded-md border-2 border-purple-500 bg-purple-700 hover:bg-purple-950 text-white mt-2">Submit</button>
+                    </form>
+                </dialog>
             </div>
             <div class="flex flex-col gap-4 w-full max-w-2xl" id="availableRooms">
                 <!-- Add rooms here depending on if any available -->
